responsive styles added

--- a/index.html
+++ b/index.html
@@ -13,36 +13,48 @@
 
     <main class="grid-container">
         <article class="featured">
-            <h3><a href="">50 Essential skills for a greener careers in this changing climate</a></h3>
-            <h4>Ramesh Vyas</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, reprehenderit eligendi cum recusandae eos deleniti?</p>
+            <div>
+                <h3><a href="">50 Essential skills for a greener careers in this changing climate</a></h3>
+                <h4>Ramesh Vyas</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, reprehenderit eligendi cum recusandae eos deleniti?</p>
+            </div>
             <img src="img/1.jpg" alt="Featured Image">
         </article>
 
         <article>
-            <img src="img/2.jpg" alt="Featured Image">
-            <h4><a href="">50 Essential skills for a greener careers in this changing climate</a></h4>
-            <h5>Ramesh Vyas</h5>  
-        </article>
-        <article>
             <img src="img/3.jpg" alt="Featured Image">
-            <h4><a href="">50 Essential skills for a greener careers in this changing climate</a></h4>
-            <h5>Ramesh Vyas</h5>  
+            <div>
+                <h4><a href="">50 Essential skills for a greener careers in this changing climate</a></h4>
+                <h5>Ramesh Vyas</h5>  
+            </div>
         </article>
         <article>
             <img src="img/4.jpg" alt="Featured Image">
-            <h4><a href="">50 Essential skills for a greener careers in this changing climate</a></h4>
-            <h5>Ramesh Vyas</h5>  
+            <div>
+                <h4><a href="">50 Essential skills for a greener careers in this changing climate</a></h4>
+                <h5>Ramesh Vyas</h5>  
+            </div>
         </article>
         <article>
             <img src="img/2.jpg" alt="Featured Image">
-            <h4><a href="">50 Essential skills for a greener careers in this changing climate</a></h4>
-            <h5>Ramesh Vyas</h5>  
+            <div>
+                <h4><a href="">50 Essential skills for a greener careers in this changing climate</a></h4>
+                <h5>Ramesh Vyas</h5>  
+            </div>
+        </article>
+        <article>
+            <img src="img/3.jpg" alt="Featured Image">
+            <div>
+                <h4><a href="">50 Essential skills for a greener careers in this changing climate</a></h4>
+                <h5>Ramesh Vyas</h5>  
+            </div>
         </article>
         <article>
             <img src="img/1.jpg" alt="Featured Image">
-            <h4><a href="">50 Essential skills for a greener careers in this changing climate</a></h4>
-            <h5>Ramesh Vyas</h5>  
+            <div>
+                <h4><a href="">50 Essential skills for a greener careers in this changing climate</a></h4>
+                <h5>Ramesh Vyas</h5>  
+            </div>
         </article>
     </main>
 </body>
